crates/aranya-policy-compiler/tests/data/type_errors/spread_option_struct_invalid_type_fail.policy
struct Foo { x int, y bool }
struct Bar { x string }
function baz(b struct Bar) struct Foo {
    let maybe_bar = if true {
        :Some(b)
    } else {
        :None
    }


    let new_foo = Foo {
        y: true,
        ...maybe_bar
    }

    return new_foo
}
